@@ -1,479 +1,211 @@
 ---
-title: "F5E5 炉火向明天 — FFM、值类与 JDK 26 的门口"
+title: "F5E5 炉火向明天 — 稳定 API、孵化器与 Valhalla"
 date: "2027-03-06"
 series: "jvm-academy"
 season: 5
 episode: 5
-tags: ["Java 25", "FFM", "Foreign Function", "值类", "Value Classes", "Vector API", "JDK 26", "全剧终"]
-excerpt: "全剧终。FFM 打通 C 世界传送门，不用 JNI 直接操作堆外内存；值类让对象扁成拼豆、消灭 header；Vector API 写出向量化 SIMD 代码。JDK 26 的 HTTP/3 快递已到门口——焰焰把火种交给阿零，炉火向明天。"
+tags: ["Java 25", "FFM", "Vector API", "Valhalla", "JDK 26", "全剧终"]
+excerpt: "全剧终不做版本预言：FFM 已在 JDK 22 正式,Vector API 在 JDK 25/26 仍是孵化器,Value Classes 的 JEP 401 仍处于 Submitted 并只在 Valhalla EA 试验。把可用于生产、需显式孵化模块和只能研究的能力分成三层。"
 ---
 
-> **"焰焰说：'剩下的路你自己走。JVM 是一个仍在生长的炉子，你已经知道怎么往里加柴了。'阿零点燃了下一根火柴。"**
-> — 全剧终
+![JVM 火种纪漫画：f05e05-ffm-value-finale](/comics/jvm/f05e05-ffm-value-finale.png)
+
+> **“真正的技术视野不是把未来写成已经发生,而是知道哪一层今天能依赖、哪一层只能试验、哪一层发布前必须重查。”**
+> — 焰焰,合上《JEP 编年史》
 
 ---
 
-## 🎬 开场：最后一课
+## 🎬 开场:三只不同颜色的箱子
 
 > **〔1〕**
-> 结业那天，焰焰在白板上写了三个词：**FFM、Value、Vector**。「这三个，是 Java 向下和向上的两个方向。FFM 向下——直接碰 C 的世界，不再绕 JNI 这条破老路。值类向上——让数字和对象之间的边界消失，堆上的对象扁成拼豆，不再背着 header 和间接指针的包袱。」
+> 绿色箱子写着“稳定”:Foreign Function & Memory API 已由 JEP 454 在 JDK 22 正式交付。Java 25 可以直接分配受生命周期管理的堆外内存,不需要 `--enable-preview`。
 
 > **〔2〕**
-> **向下：FFM**。`JNI`（Java Native Interface）是 Java 调 C 代码的传统路线：写一堆 native 声明，写 C 头文件，写 JNI 胶水函数，编译成 `.so`/`.dll`，`System.loadLibrary()`——出错了基本只有段错误作为反馈。JDK 22 正式化的 **FFM API**（Foreign Function & Memory API，JEP 454）彻底改写这条路：纯 Java 声明、运行时下链、类型安全、自动内存管理或显式 Arena 控制。
+> 黄色箱子写着“孵化”:Vector API 在 JDK 25 是 JEP 508（第十次孵化）,在 JDK 26 是 JEP 529（第十一次孵化）。它仍位于 `jdk.incubator.vector`,编译和运行都要 `--add-modules`。
 
 > **〔3〕**
-> **向上：值类（Value Classes，JEP 401 Preview，JDK 25）**。普通对象在堆上有 header（刚才学的）、有身份（identity）、通过引用访问——但坐标 `(x, y)` 这样的东西根本不需要身份。值类声明 `value class Point { int x; int y; }`，JVM 可以把它「扁平化」（flatten）：把字段内联到数组或其他对象的内存里，消除 header，消除间接指针，像 C 的 struct 一样紧密排列。
+> 红色箱子写着“研究”:Value Classes and Objects 的 JEP 401 状态仍是 **Submitted**,没有进入标准 JDK 25 或 JDK 26。可下载 Valhalla Early-Access Build 试验,但不能把 `value class` 示例冒充 Java 25 实测。
 
 > **〔4〕**
-> 阿零问：「Vector API 呢？」焰焰笑了：「那是告诉 CPU 一次算 8 个 float 的方法——SIMD 向量化，写法像普通代码，JIT 会翻译成 AVX/AVX-512 指令。还在孵化（JEP 460/508），但已经很好用了。JDK 26 的 HTTP/3 支持和更多 Leyden 优化，快递已到门口。」炉子还在烧，炉火向明天。
+> 门外的 HTTP/3 快递也不是“规划中”了:JDK 26 已于 2026-03-17 发布,JEP 517 已交付,HTTP Client 需要显式选择 `HTTP_3`,并可按服务端能力回退。焰焰把三只箱子的钥匙交给阿零:「状态先于故事。」
 
 ---
 
-## 🔑 本话速查：三项关键能力
+## 🟢 稳定层:FFM 已经可以依赖
 
-```
-FFM API（JEP 454，JDK 22 正式）
-─────────────────────────────────────────
-  核心类：MemorySegment, MemoryLayout, FunctionDescriptor, Linker, Arena
-  调用 C 函数：Linker.nativeLinker() → SymbolLookup → MethodHandle
-  堆外内存：Arena.ofConfined() / Arena.ofShared()
-  优势：类型安全、无 JNI 胶水代码、自动释放（try-with-resources）、支持 upcall
-
-值类（Value Classes，JEP 401 Preview，JDK 25）
-─────────────────────────────────────────
-  声明：value class Point { public int x; public int y; }
-  特征：无 identity，==比较值相等，不能同步（synchronized），可扁平化
-  内联效果：JVM 将字段内联到数组/对象布局，消灭 header + 间接指针
-  状态：JDK 25 Preview（需 --enable-preview），持续演进
-
-Vector API（JEP 460 孵化，JDK 24；JEP 508 孵化，JDK 25）
-─────────────────────────────────────────
-  包：jdk.incubator.vector
-  核心：VectorSpecies<Float> SPECIES = FloatVector.SPECIES_256
-  操作：FloatVector.fromArray → .add / .mul / .fma → .intoArray
-  效果：JIT 生成 SIMD 指令（AVX2/AVX-512），吞吐量 4~16x
-  状态：孵化器模块（需 --add-modules jdk.incubator.vector）
-```
-
----
-
-## ⚙️ 代码实录一：FFM — 直接调用 C 标准库
+FFM 的价值不只是“少写 JNI”。它把堆外内存的范围、生命周期、对齐和读写布局放进受支持的 Java API。下面代码在标准 Java 25 上运行,没有预览开关:
 
 ```java
-// javac -encoding UTF-8 --release 22 FfmDemo.java
-// java FfmDemo
-// 注意：FFM 在 JDK 22 正式，无需 --enable-preview
-import java.lang.foreign.*;
-import java.lang.invoke.MethodHandle;
-import java.nio.charset.StandardCharsets;
+import java.lang.foreign.Arena;
+import java.lang.foreign.ValueLayout;
 
 class FfmDemo {
-
-    // ── 场景 1：调用 C strlen ─────────────────────────────────
-    static long callStrlen(String s) throws Throwable {
-        Linker linker = Linker.nativeLinker();
-        SymbolLookup stdlib = linker.defaultLookup();
-
-        // 找到 strlen 符号
-        MethodHandle strlen = linker.downcallHandle(
-            stdlib.find("strlen").orElseThrow(),
-            FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS)
-        );
-
-        // 在 confined Arena 里分配堆外内存（try 退出自动释放）
-        try (Arena arena = Arena.ofConfined()) {
-            // 把 Java String 写成 C 风格 null-terminated 字节串
-            MemorySegment cStr = arena.allocateFrom(s);
-            return (long) strlen.invoke(cStr);
-        }
-    }
-
-    // ── 场景 2：调用 C printf ─────────────────────────────────
-    static void callPrintf(String fmt, int value) throws Throwable {
-        Linker linker = Linker.nativeLinker();
-        SymbolLookup stdlib = linker.defaultLookup();
-
-        MethodHandle printf = linker.downcallHandle(
-            stdlib.find("printf").orElseThrow(),
-            FunctionDescriptor.of(ValueLayout.JAVA_INT,
-                ValueLayout.ADDRESS,   // format string
-                ValueLayout.JAVA_INT)  // variadic arg
-        );
-
-        try (Arena arena = Arena.ofConfined()) {
-            MemorySegment fmtSeg = arena.allocateFrom(fmt);
-            printf.invoke(fmtSeg, value);
-        }
-    }
-
-    // ── 场景 3：堆外内存操作（off-heap buffer）────────────────
-    static void offHeapBuffer() {
-        try (Arena arena = Arena.ofConfined()) {
-            // 分配 1024 字节堆外内存
-            MemorySegment buf = arena.allocate(1024);
-
-            // 写入结构体布局
-            MemoryLayout layout = MemoryLayout.structLayout(
-                ValueLayout.JAVA_INT.withName("id"),
-                ValueLayout.JAVA_FLOAT.withName("price"),
-                MemoryLayout.paddingLayout(4)   // 对齐
-            );
-
-            var idHandle    = layout.varHandle(MemoryLayout.PathElement.groupElement("id"));
-            var priceHandle = layout.varHandle(MemoryLayout.PathElement.groupElement("price"));
-
-            idHandle.set(buf, 0L, 42);
-            priceHandle.set(buf, 0L, 9.90f);
-
-            int   id    = (int)   idHandle.get(buf, 0L);
-            float price = (float) priceHandle.get(buf, 0L);
-            System.out.printf("堆外结构体读取: id=%d, price=%.2f%n", id, price);
-        } // arena 关闭 → 内存立即释放，无 GC 压力
-    }
-
-    public static void main(String[] args) throws Throwable {
-        // strlen
-        String test = "咖啡站FFM";
-        long len = callStrlen(test);
-        System.out.printf("strlen(\"%s\") = %d（UTF-8 字节数）%n", test, len);
-
-        // printf（简单整数格式）
-        System.out.print("C printf 输出: ");
-        callPrintf("订单号: %d\n", 10086);
-
-        // 堆外内存
-        offHeapBuffer();
-    }
-}
-```
-
-**实测输出**（JDK 25，Linux/macOS；Windows 路径相同，C 库名不同）：
-
-```
-strlen("咖啡站FFM") = 12（UTF-8 字节数）
-C printf 输出: 订单号: 10086
-堆外结构体读取: id=42, price=9.90
-```
-
----
-
-## ⚙️ 代码实录二：值类 — 消灭 header 的拼豆对象
-
-```java
-// javac -encoding UTF-8 --release 25 --enable-preview ValueDemo.java
-// java --enable-preview ValueDemo
-// JDK 25 Preview: value class / value record
-
-/** 普通 record（有 identity，堆上有 header，通过引用访问） */
-record PointRef(int x, int y) {}
-
-/** 值类 record（JDK 25 Preview：value record，无 identity，可内联扁平化） */
-value record PointVal(int x, int y) {}
-
-class ValueDemo {
-
-    static final int N = 10_000_000;
-
-    static long heapUsed() {
-        System.gc();
-        Runtime rt = Runtime.getRuntime();
-        return rt.totalMemory() - rt.freeMemory();
-    }
-
-    static void compareAllocation() {
-        long b1 = heapUsed();
-        long t1 = System.nanoTime();
-        var refs = new PointRef[N];
-        for (int i = 0; i < N; i++) refs[i] = new PointRef(i, i * 2);
-        long heapRef = heapUsed() - b1;
-        long timeRef = System.nanoTime() - t1;
-
-        long b2 = heapUsed();
-        long t2 = System.nanoTime();
-        var vals = new PointVal[N];
-        for (int i = 0; i < N; i++) vals[i] = new PointVal(i, i * 2);
-        long heapVal = heapUsed() - b2;
-        long timeVal = System.nanoTime() - t2;
-
-        System.out.printf("普通 record:  堆 ~%,d MB, 耗时 %,d ms%n",
-            heapRef / 1024 / 1024, timeRef / 1_000_000);
-        System.out.printf("value record: 堆 ~%,d MB, 耗时 %,d ms%n",
-            heapVal / 1024 / 1024, timeVal / 1_000_000);
-        System.out.println("（JVM 将 PointVal[] 内联为连续 int[] 布局，消灭引用+header）");
-    }
-
-    static void identityDemo() {
-        var a = new PointRef(1, 2);
-        var b = new PointRef(1, 2);
-        System.out.println("PointRef a == b : " + (a == b));    // false，不同对象
-
-        var va = new PointVal(1, 2);
-        var vb = new PointVal(1, 2);
-        System.out.println("PointVal va == vb: " + (va == vb)); // true，值相等即相等
-        // 值类无 identity：不能 synchronized(va)，不能作为 WeakReference key
-    }
-
     public static void main(String[] args) {
-        compareAllocation();
-        System.out.println();
-        identityDemo();
+        try (Arena arena = Arena.ofConfined()) {
+            long intSize = ValueLayout.JAVA_INT.byteSize();
+            var point = arena.allocate(intSize * 2, ValueLayout.JAVA_INT.byteAlignment());
+
+            point.set(ValueLayout.JAVA_INT, 0, 3);
+            point.set(ValueLayout.JAVA_INT, intSize, 4);
+
+            int x = point.get(ValueLayout.JAVA_INT, 0);
+            int y = point.get(ValueLayout.JAVA_INT, intSize);
+            System.out.println("point=" + x + "," + y);
+        }
     }
 }
 ```
-
-**预期效果**（JDK 25，值类内联优化成熟后）：
-
-```
-普通 record:  堆 ~480 MB, 耗时 312 ms
-value record: 堆 ~160 MB, 耗时  98 ms
-（JVM 将 PointVal[] 内联为连续 int[] 布局，消灭引用+header）
-
-PointRef a == b : false
-PointVal va == vb: true
-```
-
----
-
-## ⚙️ 代码实录三：Vector API — 告诉 CPU 一次算 8 个
-
-```java
-// javac -encoding UTF-8 --release 25 --add-modules jdk.incubator.vector VectorDemo.java
-// java --add-modules jdk.incubator.vector VectorDemo
-import jdk.incubator.vector.*;
-
-class VectorDemo {
-
-    // SPECIES_256 = AVX2：256bit 寄存器，一次处理 8 个 float
-    static final VectorSpecies<Float> SPECIES = FloatVector.SPECIES_256;
-
-    // ── 标量版：逐元素点积 ──────────────────────────────────────
-    static float dotProductScalar(float[] a, float[] b) {
-        float sum = 0f;
-        for (int i = 0; i < a.length; i++) sum += a[i] * b[i];
-        return sum;
-    }
-
-    // ── 向量版：SIMD 点积 ───────────────────────────────────────
-    static float dotProductVector(float[] a, float[] b) {
-        int len  = a.length;
-        int step = SPECIES.length();  // 8（AVX2）或 16（AVX-512）
-        FloatVector acc = FloatVector.zero(SPECIES);
-
-        // 主循环：每次处理 step 个元素
-        int i = 0;
-        for (; i + step <= len; i += step) {
-            FloatVector va = FloatVector.fromArray(SPECIES, a, i);
-            FloatVector vb = FloatVector.fromArray(SPECIES, b, i);
-            acc = va.fma(vb, acc);  // fused multiply-add: acc += va * vb
-        }
-        float sum = acc.reduceLanes(VectorOperators.ADD);
-
-        // 尾巴：处理不满一个 SPECIES 的剩余元素
-        for (; i < len; i++) sum += a[i] * b[i];
-        return sum;
-    }
-
-    static void benchmark() {
-        int N = 1_000_000;
-        float[] a = new float[N], b = new float[N];
-        for (int i = 0; i < N; i++) { a[i] = i * 0.1f; b[i] = i * 0.2f; }
-
-        // 预热
-        for (int w = 0; w < 5; w++) {
-            dotProductScalar(a, b);
-            dotProductVector(a, b);
-        }
-
-        // 测量
-        int RUNS = 20;
-        long t1 = System.nanoTime();
-        float r1 = 0;
-        for (int r = 0; r < RUNS; r++) r1 = dotProductScalar(a, b);
-        long scalarNs = (System.nanoTime() - t1) / RUNS;
-
-        long t2 = System.nanoTime();
-        float r2 = 0;
-        for (int r = 0; r < RUNS; r++) r2 = dotProductVector(a, b);
-        long vectorNs = (System.nanoTime() - t2) / RUNS;
-
-        System.out.printf("标量点积: %,d µs  结果=%.2f%n", scalarNs / 1000, r1);
-        System.out.printf("向量点积: %,d µs  结果=%.2f%n", vectorNs / 1000, r2);
-        System.out.printf("加速比: %.1fx%n", (double) scalarNs / vectorNs);
-        System.out.printf("SPECIES 宽度: %d floats（%d bit）%n",
-            SPECIES.length(), SPECIES.vectorBitSize());
-    }
-
-    public static void main(String[] args) {
-        benchmark();
-    }
-}
-```
-
-**实测输出**（JDK 25，AVX2 支持的 CPU）：
-
-```
-标量点积: 1,243 µs  结果=2.08E13
-向量点积:   187 µs  结果=2.08E13
-加速比: 6.6x
-SPECIES 宽度: 8 floats（256 bit）
-```
-
----
-
-## ⚠️ 常见陷阱
 
 ```bash
-# ❌ 陷阱 1：FFM 在 Windows 找不到 "strlen"
-# Linux/macOS：Linker.nativeLinker().defaultLookup().find("strlen") ✅
-# Windows：C 标准库符号名可能带前缀（_strlen 或在 ucrtbase.dll）
-# ✅ Windows 用 SymbolLookup.libraryLookup("ucrtbase", Arena.global())
-SymbolLookup msvcrt = SymbolLookup.libraryLookup("ucrtbase", Arena.global());
-MethodHandle strlen = linker.downcallHandle(
-    msvcrt.find("strlen").orElseThrow(), ...);
-
-# ❌ 陷阱 2：FFM MemorySegment 越界访问 → IndexOutOfBoundsException（不是段错误）
-# FFM 的堆外内存有边界检查，越界抛 Java 异常而非崩溃进程——这是 FFM vs Unsafe 的优势
-# ✅ 用 MemorySegment.asSlice(offset, size) 明确划定访问范围
-
-# ❌ 陷阱 3：值类（value record）不能作为 HashMap key（JDK 25 Preview 限制）
-# value record 默认 hashCode/equals 按值实现，可以作为 key
-# 但不能用于 synchronized / WeakReference / IdentityHashMap
-# ✅ 值类用于纯数据传输（坐标、金额、颜色）；需要 identity 的场景用普通 class
-
-# ❌ 陷阱 4：Vector API 是孵化器模块，--add-modules 不能省
-# javac / java 都需要加 --add-modules jdk.incubator.vector
-# 否则：error: package jdk.incubator.vector is not visible
-# ✅ Maven/Gradle 项目在编译和运行插件都要配置该参数
-
-# ❌ 陷阱 5：Vector API 的 SPECIES 选错导致没有 SIMD 效果
-# FloatVector.SPECIES_PREFERRED 自动选当前 CPU 最宽的寄存器——推荐
-# 手写 SPECIES_256 在只有 SPECIES_128 的 CPU 上会软件模拟（反而更慢）
-static final VectorSpecies<Float> SPECIES = FloatVector.SPECIES_PREFERRED;
+javac --release 25 FfmDemo.java
+java FfmDemo
+# point=3,4
 ```
+
+`Arena` 关闭后再访问 segment 会失败,这正是生命周期边界。调用受限制的本地函数还涉及 native access 与平台 ABI,不能把“无需手写 JNI 胶水”简化成“跨平台没有风险”。
+
+---
+
+## 🟡 孵化层:Vector API 可以试,不能假装已定型
+
+```text
+JDK 25: JEP 508, tenth incubator
+JDK 26: JEP 529, eleventh incubator
+模块:   jdk.incubator.vector
+开关:   --add-modules jdk.incubator.vector
+```
+
+Vector API 给 JIT 一个跨 CPU 指令集的向量表达,但“写了 Vector API”不等于一定生成 AVX-512。实际指令取决于 CPU、向量形状、HotSpot 优化与数据布局,要通过 JMH、JIT 日志或汇编观察验证。
+
+```bash
+# 先确认当前 JDK 是否携带孵化模块
+java --list-modules | grep jdk.incubator.vector
+
+# PowerShell
+java --list-modules | Select-String jdk.incubator.vector
+
+# 示例工程的编译/运行形状
+javac --release 25 --add-modules jdk.incubator.vector VectorDemo.java
+java --add-modules jdk.incubator.vector VectorDemo
+```
+
+跨 JDK 升级时必须重新编译并重跑测试,因为 incubator API 不承诺二进制与源代码兼容。
+
+---
+
+## 🔴 研究层:Valhalla 值类仍不是 Java 25 功能
+
+JEP 401 的目标是引入没有对象身份、字段为 final 的 value objects,让 JVM 有更多布局与扁平化自由。但官方同时强调:它不保证某一种内存布局,部分优化还依赖后续语言与 JVM 增强。
+
+```text
+概念草图（仅用于理解,不是标准 JDK 25 源码）
+
+value class Point {
+    int x;
+    int y;
+}
+```
+
+截至 2026-08-06:
+
+- JEP 401 状态是 `Submitted`,没有 Target Release;
+- 试验入口是 Project Valhalla Early-Access Build;
+- `value record`、`Objects.hasIdentity` 等示例属于该 EA 设计,不能放进 `javac --release 25` 的验证结果;
+- “值对象必然消灭 header、必然扁平化”是过度承诺。JEP 401 只赋予 JVM优化自由,具体编码受使用点、原子性、可空性与编译信息影响。
+
+这类文章要在**发布日期当天**重新检查 JEP 状态和 EA 语法,不能用写稿日的路线图冻结到 2027 年。
+
+---
+
+## JDK 26:已经发布,不是“门口规划”
+
+JDK 26 的 GA 日期是 2026-03-17。与本话相关的已交付能力包括:
+
+| 能力 | JEP | 真实状态 |
+|---|---|---|
+| HTTP/3 for HTTP Client | 517 | JDK 26 已交付,需显式选择 HTTP/3 |
+| AOT Object Caching with Any GC | 516 | JDK 26 已交付 |
+| Structured Concurrency | 525 | **Sixth Preview**,仍未正式 |
+| Vector API | 529 | **Eleventh Incubator** |
+
+所以“JDK 26 HTTP/3 快递已到门口”必须改成“已交付且默认仍偏好 HTTP/2”。新功能的存在、默认行为和生产建议是三件不同的事。
 
 ---
 
 ## 🔬 炉底显微镜
 
 ```bash
-# FFM：查看 downcall/upcall 生成的 stub（启用日志）
-java -Djava.lang.foreign.linker.trace=true FfmDemo 2>&1 | head -20
+# 稳定基线
+java --version
+javac --release 25 FfmDemo.java
+java FfmDemo
 
-# 值类：查看 JIT 是否真正内联了 value record 的字段
-java --enable-preview -XX:+PrintCompilation \
-     -XX:+UnlockDiagnosticVMOptions -XX:+PrintInlining ValueDemo 2>&1 \
-     | grep PointVal | head -10
+# 孵化模块是否存在
+java --list-modules | grep jdk.incubator.vector
 
-# Vector API：确认 JIT 生成了 SIMD 指令（查看汇编需要 hsdis）
-java --add-modules jdk.incubator.vector \
-     -XX:+UnlockDiagnosticVMOptions \
-     -XX:PrintAssemblyOptions=intel \
-     -XX:CompileCommand="print,VectorDemo.dotProductVector" \
-     VectorDemo 2>&1 | grep -E "ymm|zmm" | head -10
-# ymm = YMM 寄存器 = AVX2 256bit；zmm = ZMM = AVX-512 512bit
-
-# 全系列回顾：查看 JFR + ZGC + AOT + FFM 叠加使用
-java -XX:AOTCache=app.aot \
-     -XX:+UseZGC \
-     -XX:StartFlightRecording=duration=30s,filename=final.jfr \
-     --add-modules jdk.incubator.vector \
-     MyApp
-jfr summary final.jfr  # 看 GC pause / compilation / classload 汇总
+# EA 能力不要在标准 JDK 上伪造成功；先记录实际发行版
+java -XshowSettings:properties -version 2>&1 | grep -E "java.version|java.vendor"
 ```
+
+验证报告至少记录:JDK vendor/build、是否开启 preview/incubator、CPU 架构、运行命令和真实输出。只写“JDK 25 实测”却给出标准 JDK 根本不存在的 `value class` 语法,比不写验证更误导。
 
 ---
 
-## 📐 版本边界
+## 📐 全季版本边界终表
 
 **版本边界**
 
-| 特性 | JDK | 状态 | 说明 |
-|---|---|---|---|
-| FFM API | **JDK 22** | ✅ 正式 | JEP 454，替代 JNI |
-| 值类（Value Classes）| **JDK 25** | 🔬 Preview | JEP 401，需 `--enable-preview` |
-| value record | **JDK 25** | 🔬 Preview | JEP 401 子集 |
-| Vector API | **JDK 25** | 🧪 孵化 | JEP 508，需 `--add-modules` |
-| AOT 类加载缓存 | **JDK 24** | ✅ 正式 | JEP 483（Leyden Phase 1）|
-| AOT 方法代码缓存 | **JDK 25** | ✅ 正式 | JEP 484（Leyden Phase 2）|
-| 紧凑对象头 | **JDK 25** | 🔬 Preview | JEP 472 |
-| 分代 ZGC 默认 | **JDK 25** | ✅ 默认 | JEP 474 |
-| Stream Gatherers | **JDK 25** | ✅ 正式 | JEP 485 |
-| StructuredTaskScope | **JDK 25** | ✅ 正式 | JEP 505 |
-| HTTP/3 客户端 | **JDK 26** | 📬 规划中 | 快递到门口 |
-| 本话代码运行环境 | JDK 25 | ✅ | GraalVM 25.0.4 |
+状态核对于 2026-08-06。
+
+| 能力 | Java 25 状态 | 备注 |
+|---|---|---|
+| FFM API | 正式 | JEP 454,自 JDK 22 |
+| Scoped Values | 正式 | JEP 506 |
+| Compact Object Headers | 可选产品特性 | JEP 519,非默认 |
+| Structured Concurrency | Fifth Preview | JEP 505,需 `--enable-preview` |
+| Vector API | Tenth Incubator | JEP 508,需 `--add-modules` |
+| Value Classes | **不在标准 JDK 25** | JEP 401 Submitted,Valhalla EA |
+| Generational ZGC | 选择 ZGC 时的唯一模式 | JDK 24 已移除非分代模式;默认收集器仍是 G1 |
+| AOT method profiling | 已交付 | JEP 515,缓存画像而非机器码 |
 
 ---
 
 ## 🎯 随堂练习
 
-**Q1.** FFM API 中，`Arena.ofConfined()` 和 `Arena.ofShared()` 有什么区别？
+**Q1.** FFM 在 Java 25 是否需要 `--enable-preview`？
 
-**Q2.** 用 FFM 调用 C 函数时，`FunctionDescriptor` 的作用是什么？
+**Q2.** Vector API 为什么需要 `--add-modules`？
 
-**Q3.** 值类（value class）为什么不能作为 `synchronized` 的锁对象？
+**Q3.** Value Classes 是否属于标准 JDK 25？
 
-**Q4.** `value record PointVal(int x, int y)` 中，`va == vb`（两个字段相等的实例）结果是什么？为什么？
+**Q4.** JDK 26 的 HTTP/3 是否已经交付,是否默认使用？
 
-**Q5.** Vector API 中 `SPECIES_PREFERRED` 比硬编码 `SPECIES_256` 有什么优势？
-
-**Q6.** `FloatVector.fma(b, c)` 计算什么？为什么比 `mul(b).add(c)` 更好？
-
-**Q7.** FFM 的堆外内存（`Arena.ofConfined()`）与 `sun.misc.Unsafe.allocateMemory()` 相比，安全性体现在哪里？
-
-**Q8.** 值类消灭了对象 header 和间接指针，对 GC 有什么影响？
-
-**Q9.** 回顾全系列：如果要写一个高性能 FaaS 函数（要求冷启动 <500ms、GC 停顿 <1ms、需要调用 C 图像处理库），应该组合哪些 JVM 技术？
-
-**Q10.** 《JVM 火种纪》的主角「阿零」代表什么？「焰焰」代表什么？
-
----
+**Q5.** 为什么不能承诺 value object 一定扁平化？
 
 > [!答案]
 >
-> **Q1. `Arena.ofConfined()`：单线程独占，只有创建线程能访问其分配的 `MemorySegment`，违反则抛异常；适合方法内局部用途，try-with-resources 安全释放。`Arena.ofShared()`：多线程共享，任意线程均可访问；适合跨线程传递堆外 buffer。**两者在 Arena 关闭后访问均抛 `IllegalStateException`——这是 FFM 相比 `Unsafe` 的核心安全改进：释放后访问立即报错，而非产生段错误。
+> **Q1. 不需要。** FFM 已由 JEP 454 在 JDK 22 正式交付。调用受限制的本地函数仍要处理 native access 与平台 ABI 边界。
 >
-> **Q2. `FunctionDescriptor` 描述 C 函数的签名：返回类型 + 参数类型列表，均用 `ValueLayout` 表示（`JAVA_INT`/`JAVA_LONG`/`ADDRESS` 等）。**`Linker.downcallHandle()` 根据 `FunctionDescriptor` 生成类型安全的 `MethodHandle`；没有 FunctionDescriptor，Linker 不知道如何在 Java 类型和 C ABI 之间做转换（整数寄存器/浮点寄存器/栈传参规则）。
+> **Q2.** 因为 JDK 25 的 Vector API 仍在 `jdk.incubator.vector` 孵化模块中;孵化 API 不保证跨版本兼容。
 >
-> **Q3. 值类没有 identity（对象身份）。Java 的 `synchronized` 依赖对象的 monitor，monitor 附着在对象的 identity 上。**值类的两个实例字段完全相同时视为「同一个值」，不存在哪个具体堆对象持有锁的概念。JVM 规范明确禁止对值类实例加锁，尝试会抛 `IllegalMonitorStateException`。
+> **Q3. 不是。** JEP 401 仍是 Submitted,试验需要 Valhalla EA Build,不能用标准 `javac --release 25` 编译。
 >
-> **Q4. `va == vb` 结果为 `true`。**值类无 identity，`==` 比较的是值（所有字段相等），而非引用地址。等价于 `va.x() == vb.x() && va.y() == vb.y()`。普通 `record` 的 `equals()` 也按值比较，但 `==` 比较引用地址（两个 `new PointRef(1,2)` 的 `==` 为 `false`）。
+> **Q4. 已交付。** JEP 517 随 JDK 26 GA;HTTP Client 需要显式选择 `HttpClient.Version.HTTP_3`,默认协议偏好没有从 HTTP/2 改成 HTTP/3。
 >
-> **Q5. `SPECIES_PREFERRED` 在运行时自动选择当前 CPU 支持的最宽寄存器（128/256/512 bit），最大化利用硬件；跨 CPU 迁移无需改代码。**硬编码 `SPECIES_256` 在只有 128bit 支持的 CPU 上必须软件模拟（实际没有 SIMD 加速，性能反而可能下降）；在有 512bit 的 CPU 上也浪费了一半寄存器宽度。
->
-> **Q6. `fma(b, c)` = `this * b + c`（Fused Multiply-Add，融合乘加）。优点：一条 CPU 指令（`VFMADD`）完成乘加，比 `mul(b).add(c)` 少一次中间向量写回，减少舍入误差（结果只舍入一次而非两次），同时减少指令数。**在点积、矩阵乘法等场景吞吐量可再提升 10~30%。
->
-> **Q7. FFM 的 `MemorySegment` 有边界（bounds）和存活状态（liveness）两重检查：越界访问抛 `IndexOutOfBoundsException`（不是段错误），Arena 关闭后访问抛 `IllegalStateException`。**`Unsafe.allocateMemory()` 完全不做边界检查，越界写直接损坏进程内存或触发 SIGSEGV，调试极难；且释放后没有检测机制，use-after-free 是静默 UB。FFM 把本地内存操作纳入 Java 的异常体系，可调试、可安全审计。
->
-> **Q8. 值类字段被内联到数组或父对象内存时，这些字段不是独立的堆对象，没有独立的引用——GC 不需要追踪它们（没有额外的引用链），扫描对象图的工作量减少。**GC 停顿时间缩短（更少对象需要标记/移动）；内存连续性提高（数组元素紧密排列）→ CPU 缓存命中率提升，进一步提高吞吐量。与紧凑对象头（F5E4）叠加，是 Valhalla 项目的最终目标。
->
-> **Q9. 推荐组合：① AOT 缓存（JEP 483/484）：消灭冷启动类加载 + 编译延迟，<200ms 启动即峰值。② 分代 ZGC（JEP 474，JDK 25 默认）：GC 停顿 <1ms，满足低延迟要求。③ FFM API（JEP 454）：类型安全调用 C 图像处理库（如 libjpeg/libpng/OpenCV），无 JNI 胶水代码。④ JFR 自定义事件（JEP 328）：无侵入性能监控，定位热点。可选：⑤ Vector API：图像像素处理 SIMD 加速；⑥ 紧凑对象头（JEP 472 Preview）：高密度对象场景节约堆空间。**
->
-> **Q10. 阿零代表「刚入门的 Java 开发者」——好奇、踏实、逐步成长，和读者一起从零开始理解 JVM。焰焰代表「JVM 本身」，或一位经验深厚的 JVM 工程师——引导、点燃，把底层原理变成可以传递的「火种」。**全剧终的意象：炉火从焰焰传给阿零，JVM 的知识从书本传给读者——学习从不结束，炉火向明天。
+> **Q5.** JEP 401 的目标是给 JVM 优化自由,不保证具体布局。是否扁平化还受可空性、原子读写宽度、使用点编译信息与 JVM 实现影响。
 
 ---
 
 ## 运行环境、验证与依据
 
-- **运行环境**：GraalVM 25.0.4+7.1（`graalvm-jdk-25.0.4`），Windows 11，编码 UTF-8。
-- **验证方式**：
-  - FFM：`javac --release 22 FfmDemo.java && java FfmDemo`（JDK 22+，无需 Preview）；Windows 下改用 `ucrtbase` 库。
-  - 值类：`javac --release 25 --enable-preview ValueDemo.java && java --enable-preview ValueDemo`。
-  - Vector API：`javac --release 25 --add-modules jdk.incubator.vector VectorDemo.java && java --add-modules jdk.incubator.vector VectorDemo`；AVX2 CPU 实测约 6~8x 加速。
-- **官方依据**：[Java SE 25 JLS](https://docs.oracle.com/javase/specs/jls/se25/html/index.html)、[JEP 454: Foreign Function & Memory API](https://openjdk.org/jeps/454)、[JEP 401: Value Classes and Objects (Preview)](https://openjdk.org/jeps/401)、[JEP 508: Vector API (Tenth Incubator)](https://openjdk.org/jeps/508)。
+- **运行环境**:Oracle GraalVM 25.0.4+7.1,Windows 11,UTF-8。
+- **验证方式**:FFM `MemorySegment` 示例已用 `javac --release 25` 编译运行;Vector 模块用 `java --list-modules` 核对;标准 JDK 25 不接受 Valhalla `value class` 语法,因此本文明确不伪造该项“实测通过”。
+- **官方依据**:[Java SE 25 JLS](https://docs.oracle.com/javase/specs/jls/se25/html/index.html)、[JEP 454: Foreign Function & Memory API](https://openjdk.org/jeps/454)、[JEP 508: Vector API (Tenth Incubator)](https://openjdk.org/jeps/508)、[JEP 401: Value Classes and Objects](https://openjdk.org/jeps/401)、[Project Valhalla](https://openjdk.org/projects/valhalla)、[JEP 517: HTTP/3](https://openjdk.org/jeps/517)、[JDK 26 Release Notes](https://jdk.java.net/26/release-notes)。
 
 ---
 
-## 🔥 全剧终：火种已传
+## 🔥 全剧终:火种是校验习惯
 
-三十二话，五个卷，从 JVM 炉膛结构（类加载）到炉火精细调控（分代 ZGC、JFR），再到边界突破（FFM、值类、Vector API）。
+阿零最后带走的不是一张“未来功能清单”,而是一套发布纪律:稳定 API 写可运行示例,预览与孵化功能写清开关和兼容风险,研究项目只陈述当前状态,未来排期在上线当天重新核验。
 
-**阿零把笔记本合上，炉子还在烧。**
-
-卷一 · 炉膛基础 → 卷二 · 内存炉火 → 卷三 · 并发风门 → 卷四 · 现代管道 → 卷五 · 炉火向明天
-
-Java SE 25 是这段旅程的底板。JDK 26 的 HTTP/3、更成熟的值类、Project Valhalla 的完全落地……炉子还在烧，火种在你手里。
-
----
-
-*《JVM 火种纪》完结 · 共 32 话 · 2027-03-06*
-
+焰焰把炉门合到只剩一道红线:「先热身,再起飞。先核对,再发布。」
